# network-watch

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml  version-check.yml
docs/: EXECUTION-PLAN.md  alerts.md  architecture.md  execution-plan-2026-04-15.md  implementation-plan.md  index.html  project-log.html  project-log.md  roadmap.md
include/network_watch/: alert_engine.hpp  application.hpp  interfaces.hpp  metrics_math.hpp  models.hpp  monitor_service.hpp  settings.hpp  updater.hpp
scripts/: release-tag.ps1  release.sh  run-network-watch-admin.ps1  version-sync.mjs
src/: App.css  App.tsx  index.css  main.cpp  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: click_through_bus.rs  constants.rs  diagnostics.rs  lib.rs  main.rs  overlay.rs  sampler.rs  state.rs  tray.rs  web_server.rs  windowing.rs
src-tauri/src/agent/: autostart_cmd.rs  cli.rs  discovery.rs  hosts_cmd.rs  label_cmd.rs  machine_id_cmd.rs  mod.rs  upgrade.rs
src-tauri/src/core/: history_store.rs  mod.rs  sampler.rs  web_server.rs
src-tauri/src/desktop/: constants.rs  diagnostics.rs  mod.rs  overlay.rs  state.rs  tray.rs  windowing.rs
src-tauri/src/desktop/win/: click_through_bus.rs  mod.rs  windows_connections.rs
src-tauri/src/web/: index.html
src/app/: constants.ts  stateBus.ts  tauri.ts  themes.ts  types.ts  utils.ts
src/app/components/: ControlCenter.tsx  Sparkline.tsx  StatusStrip.tsx
src/app/components/control-center/: AlertSummaryCard.tsx  ConnectionsCard.tsx  ControlCenterSettingsModal.tsx  DiskCard.tsx  HeaderBar.tsx  HistorySummaryCard.tsx  HostEventsCard.tsx  LayoutCard.tsx  NicCard.tsx  OnlineHostsCard.tsx  OverviewCard.tsx  ProcessCard.tsx  ThemeCard.tsx  UpdateCard.tsx  UpdateModal.tsx  types.ts
src/app/config/: hostStatus.ts  pinnedHosts.ts  settings.ts  uiLayout.ts
src/app/hooks/: useOverlayInteraction.ts  useRuntimeDiagnostics.ts  useUpdater.ts  useWindowLayout.ts
src/app/hooks/window-layout/: applyWindowLayoutSafely.ts  storage.ts  tauriWindow.ts  useCollapsedClickDrag.ts  useResizeHandlers.ts
src/app/styles/: base.css  cards.css  control-center.css  details.css  index.css  resize.css  status-strip.css  widget-shell.css
src/app/windows/: SettingsWindow.tsx
src/core/: alert_engine.cpp  i18n.cpp  metrics_math.cpp  monitor_service.cpp  settings.cpp  updater.cpp
src/platform/linux/: linux_metrics_provider.cpp  linux_shell.cpp
src/platform/macos/: macos_metrics_provider.cpp  macos_shell.mm
src/platform/windows/: windows_metrics_provider.cpp  windows_shell.cpp
tests/: test_alert_engine.cpp  test_main.cpp  test_metrics_math.cpp  test_settings.cpp  test_support.hpp  test_updater.cpp
tools/: generate_cyberpunk_icon.ps1
