[package]
name = "src-tauri"
version = "0.3.13"
edition = "2024"

[lib]
name = "network_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-positioner = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


