[package]
name = "src-tauri"
version = "0.3.25"
edition = "2024"
default-run = "src-tauri"

[features]
# 桌面 GUI（默认）：包含 Tauri 及其插件/构建脚本。
default = ["desktop"]
desktop = [
  "dep:tauri",
  "dep:tauri-plugin-autostart",
  "dep:tauri-plugin-positioner",
  "dep:tauri-plugin-process",
  "dep:tauri-plugin-updater",
  "dep:tauri-plugin-window-state",
  "dep:tauri-build",
]
# Headless agent：仅保留采样/发现/上报，不引入 GUI 依赖。
agent = []

[[bin]]
name = "src-tauri"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "network-watch-agent"
path = "src/bin/network-watch-agent.rs"
required-features = ["agent"]

[lib]
name = "network_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [], optional = true }

[dependencies]
axum = { version = "0.8", features = ["macros"] }
get_if_addrs = "0.5"
hostname = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
# default-features = false：显式走 rustls（reqwest 0.13 默认已是 rustls），避免误开 native-tls/OpenSSL，便于 musl 静态链接。
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "charset", "http2", "rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
tauri = { version = "2.9.2", features = ["tray-icon"], optional = true }
tauri-plugin-autostart = { version = "2.5.0", optional = true }
tauri-plugin-positioner = { version = "2.3.1", optional = true }
tauri-plugin-process = { version = "2.3.1", optional = true }
tauri-plugin-updater = { version = "2.10.1", optional = true }
tauri-plugin-window-state = { version = "2.4.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_NetworkManagement",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
] }


